---------------------------------------------------------------------------------------------------
Version: 0.0.28
Date: 03AUG2024
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.0.27
Date: 28OCT2023
  Changes:
    - added localisation for next/previous target hotkeys
    - added a sort order to the hotkeys
    - all mod gui elements are now hidden while trainsaver is active
---------------------------------------------------------------------------------------------------
Version: 0.0.26
Date: 21SSEP2023
  Changes:
    - added target history tracking
    - added hotkeys (default right/left arrow) to navigate target history
    - added flying text at cursor when navigating target history
    - added verbose mod messages for history navigation
    - added remote interface functions to navigate target history
    - added remote interface functions to start/end/toggle trainsaver
    - restructured control script again
    - fixed that driving_until_tick, wait_signal_until_tick, and wait_station_until_tick all used driving_minimum instead of their respective minimums on trainsaver startup
---------------------------------------------------------------------------------------------------
Version: 0.0.25
Date: 02SEP2023
  Changes:
    - added extra protection against invalid target entities
    - added preliminary support for LuaUnitGroup targets
    - updated code annotations
---------------------------------------------------------------------------------------------------
Version: 0.0.24
Date: 05JUN2023
  Changes:
    - fixed that trainsaver could get stuck waiting for the target to start moving when targetting an idle train on startup
    - driving_until_tick, wait_signal_until_tick, and wait_station_until_tick are now set on trainsaver startup as appropriate depending on train state
    - added verbose mode update messages when new target request is denied by an active rocket launch